--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.datasource.url=jdbc:postgresql://localhost:5432/nutritiousprog
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://aa9r06d3i2b9mm.cfyz8xcgcqfm.eu-north-1.rds.amazonaws.com:5432/nutritiousprog
+spring.datasource.username=nutritiousprog
+spring.datasource.password=!NoPassWordHere1!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
